syntax = "proto3";

package zigchain.twap;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";
import "zigchain/twap/params.proto";

option go_package = "zigchain/x/twap/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/zigchain/twap/params";
  
  }
  
  // Queries a list of ArithmeticTwap items.
  rpc ArithmeticTwap (QueryArithmeticTwapRequest) returns (QueryArithmeticTwapResponse) {
    option (google.api.http).get = "/zigchain/twap/arithmetic_twap";
  
  }
  
  // Queries a list of ArithmeticTwapToNow items.
  rpc ArithmeticTwapToNow (QueryArithmeticTwapToNowRequest) returns (QueryArithmeticTwapToNowResponse) {
    option (google.api.http).get = "/zigchain/twap/arithmetic_twap_to_now";
  
  }
  
  // Queries a list of GeometricTwap items.
  rpc GeometricTwap (QueryGeometricTwapRequest) returns (QueryGeometricTwapResponse) {
    option (google.api.http).get = "/zigchain/twap/geometric_twap";
  
  }
  
  // Queries a list of GeometricTwapToNow items.
  rpc GeometricTwapToNow (QueryGeometricTwapToNowRequest) returns (QueryGeometricTwapToNowResponse) {
    option (google.api.http).get = "/zigchain/twap/geometric_twap_to_now";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryArithmeticTwapRequest {
  uint64                    pool_id     = 1;
  string                    base_asset  = 2;
  string                    quote_asset = 3;
  google.protobuf.Timestamp start_time  = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true, (gogoproto.moretags) = "yaml:\"start_time\""];
  google.protobuf.Timestamp end_time    = 5 [(gogoproto.nullable) = true , (gogoproto.stdtime) = true, (gogoproto.moretags) = "yaml:\"end_time\""  ];
}

message QueryArithmeticTwapResponse {
  string arithmetic_twap = 1 [(gogoproto.customtype) = "cosmossdk.io/math.LegacyDec", (gogoproto.moretags) = "yaml:\"arithmetic_twap\"", (gogoproto.nullable) = false];
}

message QueryArithmeticTwapToNowRequest {
  uint64                    pool_id     = 1;
  string                    base_asset  = 2;
  string                    quote_asset = 3;
  google.protobuf.Timestamp start_time  = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true, (gogoproto.moretags) = "yaml:\"start_time\""];
}

message QueryArithmeticTwapToNowResponse {
  string arithmetic_twap = 1 [(gogoproto.customtype) = "cosmossdk.io/math.LegacyDec", (gogoproto.moretags) = "yaml:\"arithmetic_twap\"", (gogoproto.nullable) = false];
}

message QueryGeometricTwapRequest {
  uint64                    pool_id     = 1;
  string                    base_asset  = 2;
  string                    quote_asset = 3;
  google.protobuf.Timestamp start_time  = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true, (gogoproto.moretags) = "yaml:\"start_time\""];
  google.protobuf.Timestamp end_time    = 5 [(gogoproto.nullable) = true , (gogoproto.stdtime) = true, (gogoproto.moretags) = "yaml:\"end_time\""  ];
}

message QueryGeometricTwapResponse {
  string geometric_twap = 1 [(gogoproto.customtype) = "cosmossdk.io/math.LegacyDec", (gogoproto.moretags) = "yaml:\"geometric_twap\"", (gogoproto.nullable) = false];
}

message QueryGeometricTwapToNowRequest {
  uint64 pool_id = 1;
  string base_asset = 2;
  string quote_asset = 3;
  google.protobuf.Timestamp start_time = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];
}

message QueryGeometricTwapToNowResponse {
  string geometric_twap = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"geometric_twap\"",
    (gogoproto.nullable) = false
  ];
}

